<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/rgFilterList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_delivered" />

        <RadioButton
            android:id="@+id/rbPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_pending" />

        <RadioButton
            android:id="@+id/rbAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>