<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_gray"
    tools:context=".activities.DeliveryActivity">

    <ScrollView
        android:id="@+id/svOrderList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvOrderItemDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:padding="15dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toTopOf="@+id/pvCameraView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <TextView
                        android:id="@+id/tvDeliveryCustomerName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/name"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@+id/view"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/btnBack"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center|end"
                        android:padding="10dp"
                        android:text="@string/back"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/baseline_arrow_back_24"
                        app:layout_constraintBottom_toTopOf="@id/view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="4dp"
                        android:background="@color/gray"
                        app:layout_constraintBottom_toTopOf="@+id/tvDeliveryIdLabel"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDeliveryCustomerName" />

                    <TextView
                        android:id="@+id/tvDeliveryIdLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_id"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tvDeliveryNoLabel"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view" />

                    <TextView
                        android:id="@+id/tvDeliveryId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_id"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tvDeliveryNo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tvDeliveryIdLabel" />

                    <TextView
                        android:id="@+id/tvDeliveryNoLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_no"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tvDeliveryCustomerAddressLabel"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDeliveryIdLabel" />

                    <TextView
                        android:id="@+id/tvDeliveryNo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_no"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tvDeliveryCustomerAddress"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tvDeliveryNoLabel" />


                    <TextView
                        android:id="@+id/tvDeliveryCustomerAddressLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_customer_address"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tvDeliveryDeliveryCostLabel"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDeliveryNoLabel" />

                    <TextView
                        android:id="@+id/tvDeliveryCustomerAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_customer_address"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toTopOf="@id/tvDeliveryDeliveryCost"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tvDeliveryCustomerAddressLabel" />

                    <TextView
                        android:id="@+id/tvDeliveryDeliveryCostLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_delivery_cost"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDeliveryCustomerAddressLabel" />

                    <TextView
                        android:id="@+id/tvDeliveryDeliveryCost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_delivery_cost"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        app:layout_constraintTop_toTopOf="@+id/tvDeliveryDeliveryCostLabel" />

                    <TextView
                        android:id="@+id/tvDeliveryCollectedAmountLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:padding="10dp"
                        android:text="@string/order_collected_amount"
                        android:textColor="@color/gray"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvDeliveryDeliveryCostLabel" />


                    <EditText
                        android:id="@+id/edtOrderCollectedAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="0.00"
                        android:hint="@string/_0_00"
                        android:inputType="numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/tvDeliveryDeliveryCost" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.camera.view.PreviewView
                android:id="@+id/pvCameraView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@id/btnCapture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvOrderItemDetails" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCapture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/green"
                android:backgroundTintMode="src_over"
                android:background="@drawable/sort_filter_button"
                android:padding="15dp"
                android:text="@string/take_photo"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@id/pvCameraView"
                app:layout_constraintTop_toBottomOf="@+id/pvCameraView" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRetake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/retake"
                android:background="@drawable/sort_filter_button"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCapture" />

            <ImageView
                android:id="@+id/ivOrderPic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="7dp"
                android:contentDescription="@string/delivery_image"
                android:rotation="90"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/rgDeliveryStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnRetake" />

            <RadioGroup
                android:id="@+id/rgDeliveryStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/spinnerDamagedList"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivOrderPic">

                <RadioButton
                    android:id="@+id/rbGood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/rbDamaged"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/damaged" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerDamagedList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:background="@drawable/sort_filter_button"
                android:paddingTop="5dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/btnDeliverItem"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgDeliveryStatus" />


            <TextView
                android:id="@+id/btnDeliverItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/blue"
                android:background="@drawable/sort_filter_button"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDamagedList" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>