<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvOrderDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="4dp"
        app:cardCornerRadius="15dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/btnDeliverItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableEndCompat="@drawable/baseline_keyboard_double_arrow_right_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/view"
                android:text="@string/deliver_item"
                android:textSize="12sp"/>


            <TextView
                android:id="@+id/tvOrderCustomerName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/name"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginHorizontal="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOrderCustomerName" />

            <TextView
                android:id="@+id/tvOrderIdLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_id"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintBottom_toTopOf="@id/tvOrderNoLabel"/>

            <TextView
                android:id="@+id/tvOrderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_id"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintBottom_toTopOf="@id/tvOrderNo"/>

            <TextView
                android:id="@+id/tvOrderNoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_no"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOrderIdLabel"
                app:layout_constraintBottom_toTopOf="@id/tvOrderCustomerAddressLabel"/>

            <TextView
                android:id="@+id/tvOrderNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_no"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvOrderId"
                app:layout_constraintBottom_toTopOf="@id/tvOrderCustomerAddress"/>


            <TextView
                android:id="@+id/tvOrderCustomerAddressLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_customer_address"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@id/tvOrderDeliveryCostLabel"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOrderNoLabel" />

            <TextView
                android:id="@+id/tvOrderCustomerAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_customer_address"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvOrderNo"
                app:layout_constraintBottom_toTopOf="@id/tvOrderDeliveryCost"/>

            <TextView
                android:id="@+id/tvOrderDeliveryCostLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_delivery_cost"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOrderCustomerAddressLabel" />

            <TextView
                android:id="@+id/tvOrderDeliveryCost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:padding="10dp"
                android:text="@string/order_delivery_cost"
                android:textColor="@color/gray"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tvOrderCustomerAddress" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>